--- a/composer.json
+++ b/composer.json
@@ -10,8 +10,8 @@
     "minimum-stability": "dev",
     "repositories": [
         {
-            "type": "vcs",
-            "url": "../HappyUtilities"
+            "type": "composer",
+            "url": "https://satis.daniel-doyle.co.uk"
         }
     ],
     "require": {
