--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -13,5 +13,6 @@ pipelines:
         script:
           - apt-get update && apt-get install -y unzip
           - curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer
+          - composer config --global --auth http-basic.satis.daniel-doyle.co.uk username tr33m4n password k3nrQkK3T2qkHWZR6gbiJsYYzYjnjv
           - composer install
           - make tests
