--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
         "psr-4": {"DanielDoyle\\HappyDi\\": "src/"}
     },
     "require-dev": {
-        "phpunit/phpunit": "^8"
+        "phpunit/phpunit": "^8",
+        "phpstan/phpstan": "^0.11.8"
     }
 }
