--- a/composer.json
+++ b/composer.json
@@ -23,15 +23,15 @@
         }
     },
     "require": {
-        "php": "^7.3",
-        "tr33m4n/utilities": "^1.2"
+        "php": "^8.1"
     },
     "require-dev": {
-        "phpunit/phpunit": "^8.5",
-        "phpstan/phpstan": "^0.12.11",
-        "squizlabs/php_codesniffer": "^3.6",
-        "rector/rector": "^0.11.43",
-        "friendsofphp/php-cs-fixer": "^3.0"
+        "adamwojs/php-cs-fixer-phpdoc-force-fqcn": "^2.0",
+        "friendsofphp/php-cs-fixer": "^3.8",
+        "phpstan/phpstan": "^1.7",
+        "phpunit/phpunit": "^9.5",
+        "rector/rector": "^0.13.5",
+        "squizlabs/php_codesniffer": "^3.7"
     },
     "scripts": {
         "fix": "vendor/bin/rector process && vendor/bin/php-cs-fixer fix --diff",
