--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -10,7 +10,7 @@ jobs:
         runs-on: ubuntu-latest
         strategy:
             matrix:
-                php: [ 7.3, 7.4 ]
+                php: [ 8.1 ]
         steps:
             -   name: Checkout
                 uses: actions/checkout@v2
